@@ -1,6 +1,6 @@
-{% load i18n assign %}
+{% load i18n %}
 
-{% assign name="default" %}{% trans "Name" %}{% endassign %}
+{% trans "Name" as default %}
 
 <form class="form-search input-append" onsubmit="search_submit(); return false;" style="width: 100%;">
   <span class="add-on"><i class="icon-search"></i></span>
